# whisper-asr-webservice

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  modal_app.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: webservice.py
app/asr_models/: mbain_whisperx_engine.py
docs/: build.md
